--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,15 +1,39 @@
+body, html {
+    background-color:  #bdc3c7
+}
+.spinner {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
 .two-cols {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    margin-top: 10px ;
+    margin-top: 10px;
     min-width: 500px;
+}
+.inner-sidebar {
+    border-radius: 10px;
+    height: 90vh;
+    overflow-y: scroll;
+    width: 25vh;
+    background-color: #ecf0f1;
 }
 .grid {
     display: grid;
     grid-template-columns: 15% 15% 35% 35%;
     padding: 10px;
+}
+.main-page{
+    display: grid;
+    grid-template-columns: 10% 90%;
+    align-items: top;
+    margin-top: 25px;
 }
 .values {
     font-size: 18px;
@@ -27,23 +51,33 @@
     align-items: baseline;
 }
 .card{
-    border: 1px solid lightblue;
-    border-radius: 25px;
+    border-radius: 10px;
     padding: 10px;
     text-align: left;
     height: 200px;
-    width: 150px;
+    width: 25vh;
+    background-color: #ecf0f1;
 }
 .card-in-grid {
     align-self: center;
-
 }
-
 .country-title {
     text-align: left;
     font-size: 30px;
 }
 .charts {
-    min-width: 500px;
-    margin-top: 25px;
+    align-self: center;
+    border-radius: 10px;
+    margin: 10px;
+    margin-top: 0px;
+    margin-bottom: 20px;
+    padding: 5px;
+    align-items: center;
+    width: fit-content;
+    min-width: 350px;
+    background-color: #ecf0f1;
+}
+.whole-page {
+    height: 100vh;
+    position: relative;
 }
